intro page heigt update to prevent page jump

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -89,20 +89,23 @@
 
 
 .app-container {
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     background-color: var(--body-background-color);
 }
 
 .header {
+    box-shadow: var(--header-box-shadow);
+    position: fixed;
+    right: 0;
     width: 100%;
     height: 50px;
     z-index: 10;
-    background-color: var(--header-background-color);
-    box-shadow: var(--header-box-shadow);
+    transition: width 0.5s ease;
 }
 
 .open .header {
@@ -111,9 +114,11 @@
 
 .content {
     display: flex;
-    flex: 1;
+    flex-direction: column;
+    transition: all 0.5s ease;
     width: 100%;
     background-color: var(--body-background-color);
+    flex: 1 0 auto;
 }
 
 .open.content {
@@ -122,17 +127,29 @@
 }
 
 .body {
+    margin-top: 50px;
     flex: 1 1 auto;
     width: 100%;
+    background-color: var(--body-background-color);
     overflow-y: auto;
     overflow-x: hidden;
-    background-color: var(--body-background-color);
+    height: 100%;
+    // height: calc(var(--vh, 1vh) * 100 - 50px); // Adjust dynamically if necessary
 }
+
+// .body {
+//     margin-top: 50px;
+//     flex: 1 1 auto;
+//     width: 100%;
+//     background-color: var(--body-background-color);
+//     overflow-y: auto;
+//     overflow-x: hidden;
+// }
 
 .footer {
     width: 100%;
-    height: 50px;
-    background-color: var(--footer-background-color);
+    height: 50px; /* Adjust the height as needed */
+    background-color: var(--footer-background-color); /* Use appropriate variable */
     flex-shrink: 0;
 }
 
