--- a/src/app/content/intro-page/intro-page.component.scss
+++ b/src/app/content/intro-page/intro-page.component.scss
@@ -3,6 +3,7 @@
     position: relative;
     overflow: hidden;
     width: 100%;
+    transition: height 0.5s ease 20s;
 }
 
 .text-content {
@@ -49,7 +50,8 @@
 
 .detail-section {
     position: absolute;
-    bottom: 60px;
+    // bottom: 60px;
+    top: 250px;
     left: 10%;
     width: 50%;
     z-index: 5;
